[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/fire.png" type="Texture" id=1]
[ext_resource path="res://assets/firebot.png" type="Texture" id=2]
[ext_resource path="res://FireBot.gd" type="Script" id=3]
[ext_resource path="res://Footstep.tres" type="Material" id=4]
[ext_resource path="res://assets/sound/Beep.wav" type="AudioStream" id=5]
[ext_resource path="res://Sparks.tres" type="Material" id=6]
[ext_resource path="res://SpeechBubble.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sound/Fire.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/BigFire.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=7]
resource_name = "large"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=8]
resource_name = "medium"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=6]
resource_name = "small"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "xlarge"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FireSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="CircleShape2D" id=2]
radius = 16.0

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 7, 3 )

[sub_resource type="Animation" id=12]
resource_name = "BeaconIdle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=10]
resource_name = "TurnOn"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 0, 2, 0, 2 ]
}

[sub_resource type="Animation" id=11]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( -1, 0 ), Vector2( 0, 0 ), Vector2( 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=13]
radius = 8.0

[node name="FireBot" type="Node2D" groups=[
"firebot",
]]
position = Vector2( 100, 100 )
script = ExtResource( 3 )

[node name="Footsteps" type="Particles2D" parent="."]
position = Vector2( 0, 2 )
z_index = -1
emitting = false
amount = 45
lifetime = 30.0
visibility_rect = Rect2( -1000, -1000, 2000, 2000 )
local_coords = false
process_material = ExtResource( 4 )

[node name="Sparks" type="Particles2D" parent="."]
position = Vector2( 0, -5 )
amount = 4
lifetime = 1.5
local_coords = false
process_material = ExtResource( 6 )

[node name="FireSprite" type="Sprite" parent="."]
position = Vector2( 0, -11 )
texture = ExtResource( 1 )
offset = Vector2( 1, 0 )
vframes = 4
hframes = 4
frame = 15

[node name="FireAnimation" type="AnimationPlayer" parent="."]
anims/large = SubResource( 7 )
anims/medium = SubResource( 8 )
anims/small = SubResource( 6 )
anims/xlarge = SubResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -5 )
texture = ExtResource( 2 )
vframes = 2
hframes = 4
frame = 7

[node name="FuelTimer" type="Timer" parent="."]

[node name="FeedRange" type="Area2D" parent="."]
visible = false
monitoring = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeedRange"]
shape = SubResource( 2 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
collision_layer = 65

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
visible = false
shape = SubResource( 14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/BeaconIdle = SubResource( 12 )
anims/TurnOn = SubResource( 10 )
anims/Walk = SubResource( 11 )

[node name="BeepBoop" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
max_distance = 200.0

[node name="BeaconDetector" type="Area2D" parent="."]
visible = false
monitorable = false
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeaconDetector"]
shape = SubResource( 13 )

[node name="SpeechAnchor" type="Node2D" parent="."]
position = Vector2( 0, -28 )

[node name="SpeechBubble" parent="SpeechAnchor" instance=ExtResource( 7 )]
visible = false

[node name="Fire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
max_distance = 200.0

[node name="BigFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
max_distance = 200.0
[connection signal="timeout" from="FuelTimer" to="." method="_on_FuelTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="BeaconDetector" to="." method="_on_BeaconDetector_area_entered"]
